--- a/vivo.html
+++ b/vivo.html
@@ -8,9 +8,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background: linear-gradient(180deg, #043586, #79235e, #883834);
-            background-repeat: no-repeat;
-            background-size: cover;
+            background: url('https://i.imgur.com/XrYhIbr.jpeg');
             color: #fff;
         }
         .title-sessions {
